fix pwr, lftr fuel recipe tweaks, more machine tooltips

--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -70,6 +70,7 @@ hbmfluid.coolant_mal=§cBoiling Coolant§r
 hbmfluid.deathsteam=§cExtreme Steam§r
 hbmfluid.flibe=Liquid Fluoride
 hbmfluid.fluorine=Fluorine
+hbmfluid.hf=Hydrogen Fluoride
 hbmfluid.hot_air=Hot Air
 hbmfluid.hot_water=Hot Water
 hbmfluid.radspice_slop=Neoveline Slop
@@ -219,6 +220,10 @@ trait._machine.multiblock=Multiblock
 trait._machine.nuclear=Nuclear
 trait._machine.power=Power Generator
 trait._machine.steam=Heat Exchanger
+trait.leafia.component.pwr=PWR Component
+trait.leafia.component.pwr.desc=Conductor for PWR assembly
+trait.leafia.component.lftr=LFTR Component
+trait.leafia.component.lftr.desc=Fuels flow through this block
 trait.leafia.lftr=LFTR Coolant
 trait.leafia.lftr.multiplier=Flux Multiplier: %s
 trait.leafia.magnetic=Magnetic
