--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -70,6 +70,7 @@ hbmfluid.coolant_mal=§c沸騰する冷媒§r
 hbmfluid.deathsteam=§c過高圧蒸気§r
 hbmfluid.flibe=液体フッ化物
 hbmfluid.fluorine=フッ素
+hbmfluid.hf=フッ化水素
 hbmfluid.hot_air=熱された空気
 hbmfluid.hot_water=お湯
 hbmfluid.radspice_slop=ニオヴリン汚水
@@ -221,6 +222,10 @@ trait._machine.multiblock=マルチブロック
 trait._machine.nuclear=原子力
 trait._machine.power=発電機
 trait._machine.steam=熱交換機
+trait.leafia.component.pwr=PWRのパーツ
+trait.leafia.component.pwr.desc=PWRのマルチブロック判定
+trait.leafia.component.lftr=LFTRのパーツ
+trait.leafia.component.lftr.desc=燃料はこのブロック内を流れます
 trait.leafia.lftr=LFTRの冷媒
 trait.leafia.lftr.multiplier=フラックス倍率 %s
 trait.leafia.magnetic=磁気性
