add corium particles & add leafia rods locale

--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -117,6 +117,23 @@ item.ingot_francium.name=Francium Ingot
 item.ingot_potassium.name=Potassium Cube
 item.ingot_rubidium.name=Rubidium Ingot
 item.leafiarod=Nuclear Fuel Rod "%s"
+item.leafiarod.decayheat=Fission Product Decay Heat: %s
+item.leafiarod.decays=Decays Into: %s
+item.leafiarod.heatfunc=Heat Function: %s
+item.leafiarod.heatfunc_shift=Heat Function
+item.leafiarod.life=Life: About %s
+item.leafiarod.meltingpt=Melting Point: %s
+item.leafiarod.moderated=Moderated
+item.leafiarod.pref.all=Prefers all neutrons
+item.leafiarod.pref.fast=Prefers fast neutrons
+item.leafiarod.reac.in=Reactivity %s
+item.leafiarod.reac.out=Emission %s
+item.leafiarod.status.0=FRIGID
+item.leafiarod.status.1=SUBOPTIMAL
+item.leafiarod.status.2=OPTIMAL
+item.leafiarod.status.3=OVERHEAT
+item.leafiarod.status.4=MELTDOWN
+item.leafiarod.temp=Temperature: %s
 item.leafiarodempty=Nuclear Fuel Rod Assembly
 item.lwrdebris.conjunctive.alt={type} of {block}
 item.lwrdebris.conjunctive.switch=of
@@ -126,7 +143,7 @@ item.lwrdebris.shard=Shards
 item.lwrdebris.shrapnel=Shrapnel
 item.ntmfbottle.name=%s Bottle
 item.wand_v.name=Visualizer Wand
-potion.hbm_skindamage=Damaged Skin
+potion.skindamage=Damaged Skin
 separator.u233=Uranium-233 Fluorination
 separator.u235=Uranium-235 Fluorination
 subtitles.weapon.nuke=Nuclear Explosion
