--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -14,6 +14,25 @@ cannery.leafia.pwr.b=PWR冷媒チューブは 燃料棒の熱を吸収して 冷
 cannery.leafia.pwr.c=さらに、 冷媒チューブを貫通する中性子線は減速され、 核分裂反応をより激しく することができます。
 cannery.leafia.pwr.d=中性子線を減速させるには 黒煙のブロックを 使用することも できます。
 cannery.leafia.pwr.e=PWR燃料スロットは縦に積むことで 燃料効率を向上させることができます。
+cannery.leafia.lftr=溶融塩トリウム炉
+cannery.leafia.lftr.0=LFTR (MSR)は自由に作れる マルチブロックの原子炉です。
+cannery.leafia.lftr.1=LFTRは自由に燃料を混ぜれる 液体燃料を使用します。
+cannery.leafia.lftr.2=液体は発熱し、 その熱は冷媒熱交換器で 使用することができます。
+cannery.leafia.lftr.3=最初はLFTRの冷媒は燃料を含みません。
+cannery.leafia.lftr.4=ミキシングバットを使用して LFTRの冷媒に好きな燃料を 溶け込ませることができます。
+cannery.leafia.lftr.5=この自由燃料混合システムはNBTデータを使用し、 通常の流体ダクトはNBTに対応していないため 使用できません。
+cannery.leafia.lftr.6=..すなわち、 LFTR、 ミキシングバット (核燃料モード)、 冷媒熱交換器、 溶融塩燃料分離プラントはすべて 燃料を転送するのに特殊パイプを要します。
+cannery.leafia.lftr.7=LFTR核分裂チャンバーは 東西南北上下の6方向から Fluxを受け取り-
+cannery.leafia.lftr.8=-そして以下の12ヶ所から Fluxを受け取ります。
+cannery.leafia.lftr.9=LFTRのパーツは6000°C を超えると破壊されます。
+cannery.leafia.lftr.a=LFTR核分裂チャンバーの任意の面に LFTR制御棒をへばり付けることで 核分裂反応を制限できます。
+cannery.leafia.lftr.b=制御棒はメインハンドとオフハンドで スクリュードライバーを使用するか、 Custom Control Panel から操作できます。
+cannery.leafia.lftr.c=黒煙のブロックを使用することで 中性子Fluxを減速させることができ、 核分裂反応を強化することができます。
+cannery.leafia.lftr.d=PWR中性子反射ブロックを使用することで 中性子Fluxを核分裂チャンバーの元へ 跳ね返すことができます。
+cannery.leafia.lftr.e=LFTR任意ブロックは他のLFTRパーツのように 燃料を入れられるのに加えて、 他のブロックの効果を「真似る」ことができます。
+cannery.leafia.lftr.f=LFTR燃料プラグは燃料を受け取るポートがあり、 下には緊急用の排出ポートがあります。
+cannery.leafia.lftr.g=緊急排出ポートは4000°Cで溶け、 中の燃料を排出 (漏らす) ことで 燃料を炉からすばやく抜きます。
+cannery.leafia.lftr.h=排出ポートはこのように塞がれていては 効果が無いことを忘れないでください。
 chem.leafia.flibe=液体フッ化物の生産
 chem.leafia.fluorine=蛍石の電気分解
 container.coolant_heatex=冷媒熱交換機
@@ -98,6 +117,23 @@ item.ingot_francium.name=フランシウムインゴット
 item.ingot_potassium.name=カリウムキューブ
 item.ingot_rubidium.name=ルビジウムインゴット
 item.leafiarod=核燃料棒「%s」
+item.leafiarod.decayheat=核分裂生成物の崩壊熱 %s
+item.leafiarod.decays=崩壊先 %s
+item.leafiarod.heatfunc=熱関数 %s
+item.leafiarod.heatfunc_shift=熱関数
+item.leafiarod.life=寿命 約%s
+item.leafiarod.meltingpt=融点 %s
+item.leafiarod.moderated=減速材付き
+item.leafiarod.pref.all=どの中性子線も好む
+item.leafiarod.pref.fast=高速の中性子線を好む
+item.leafiarod.reac.in=反応性 %s
+item.leafiarod.reac.out=放出率 %s
+item.leafiarod.status.0=極低温
+item.leafiarod.status.1=低温
+item.leafiarod.status.2=最適
+item.leafiarod.status.3=オーバーヒート
+item.leafiarod.status.4=メルトダウン
+item.leafiarod.temp=温度 %s
 item.leafiarodempty=核燃料棒組立体
 item.lwrdebris.conjunctive.alt={block}の{type}
 item.lwrdebris.conjunctive.switch=の
@@ -107,7 +143,7 @@ item.lwrdebris.shard=破片
 item.lwrdebris.shrapnel=破片
 item.ntmfbottle.name=%s入り瓶
 item.wand_v.name=可視化の杖
-potion.hbm_skindamage=皮膚の損傷
+potion.skindamage=皮膚の損傷
 separator.u233=ウラニウム233 フッ素添加
 separator.u235=ウラニウム235 フッ素添加
 subtitles.weapon.nuke=核爆発
