--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -174,6 +174,13 @@ tile.amat_duct_charger.name=Electromagnetic Fluid Duct Charger
 tile.amat_duct.name=Electromagnetic Fluid Duct
 tile.amat_duct.power=Power: %s
 tile.amat_duct.warn=Network power will NOT save!$Always keep your chargers charged!
+tile.ash_balefire.name=Thermonuclear Ash
+tile.baleonitite_0.name=Baleonite
+tile.baleonitite_1.name=Hot Baleonite
+tile.baleonitite_2.name=Boiling Baleonite
+tile.baleonitite_3.name=Blazing Baleonite
+tile.baleonitite_4.name=Infernal Baleonite
+tile.baleonitite_5.name=Baleonite-Corium
 tile.control_torch.name=Control Panel Torch
 tile.coolant_heatex.name=Coolant Heat Exchanger
 tile.crate_tungsten.desc=Used for DFC Crate Recipes, does not have more slots.
