--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -174,6 +174,13 @@ tile.amat_duct_charger.name=電磁力流体ダクト充電機
 tile.amat_duct.name=電磁力流体ダクト
 tile.amat_duct.power=電力 %s
 tile.amat_duct.warn=ネットワークの電力は保存されません!$充電機が充電されていることを常に確認してください。
+tile.ash_balefire.name=熱核の灰
+tile.baleonitite_0.name=べーレオニタイト
+tile.baleonitite_1.name=高温べーレオニタイト
+tile.baleonitite_2.name=超高温べーレオニタイト
+tile.baleonitite_3.name=炎上べーレオニタイト
+tile.baleonitite_4.name=業火べーレオニタイト
+tile.baleonitite_5.name=溶融べーレオニタイト
 tile.control_torch.name=Control Panel Torch
 tile.coolant_heatex.name=冷媒熱交換機
 tile.crate_tungsten.desc=DFCボックスレシピに使用するものであり、スロットが増えるわけではありません。
