fix baleonite locale

--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -175,12 +175,12 @@ tile.amat_duct.name=Electromagnetic Fluid Duct
 tile.amat_duct.power=Power: %s
 tile.amat_duct.warn=Network power will NOT save!$Always keep your chargers charged!
 tile.ash_balefire.name=Thermonuclear Ash
-tile.baleonitite_0.name=Baleonite
-tile.baleonitite_1.name=Hot Baleonite
-tile.baleonitite_2.name=Boiling Baleonite
-tile.baleonitite_3.name=Blazing Baleonite
-tile.baleonitite_4.name=Infernal Baleonite
-tile.baleonitite_5.name=Baleonite-Corium
+tile.baleonite_0.name=Baleonite
+tile.baleonite_1.name=Hot Baleonite
+tile.baleonite_2.name=Boiling Baleonite
+tile.baleonite_3.name=Blazing Baleonite
+tile.baleonite_4.name=Infernal Baleonite
+tile.baleonite_5.name=Baleonite-Corium
 tile.control_torch.name=Control Panel Torch
 tile.coolant_heatex.name=Coolant Heat Exchanger
 tile.crate_tungsten.desc=Used for DFC Crate Recipes, does not have more slots.
