--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -175,12 +175,12 @@ tile.amat_duct.name=電磁力流体ダクト
 tile.amat_duct.power=電力 %s
 tile.amat_duct.warn=ネットワークの電力は保存されません!$充電機が充電されていることを常に確認してください。
 tile.ash_balefire.name=熱核の灰
-tile.baleonitite_0.name=べーレオナイト
-tile.baleonitite_1.name=高温べーレオナイト
-tile.baleonitite_2.name=超高温べーレオナイト
-tile.baleonitite_3.name=炎上べーレオナイト
-tile.baleonitite_4.name=業火べーレオナイト
-tile.baleonitite_5.name=溶融べーレオナイト
+tile.baleonite_0.name=べーレオナイト
+tile.baleonite_1.name=高温べーレオナイト
+tile.baleonite_2.name=超高温べーレオナイト
+tile.baleonite_3.name=炎上べーレオナイト
+tile.baleonite_4.name=業火べーレオナイト
+tile.baleonite_5.name=溶融べーレオナイト
 tile.control_torch.name=Control Panel Torch
 tile.coolant_heatex.name=冷媒熱交換機
 tile.crate_tungsten.desc=DFCボックスレシピに使用するものであり、スロットが増えるわけではありません。
