--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -147,6 +147,8 @@ item.battery_pack.battery_slop.name=Neoveline Slop Battery
 item.battery_pack.battery_spk.name=Spark Battery
 item.battery_pack.battery_electro.name=Electronium Battery
 item.detonator_laser.desc2=Also can be used to indicate on multiplayer.
+item.fix_tool.name=Cruci"fix"
+item.fix_survival.name=Satanic Energy Suppressor
 item.fuzzy_identifier.message=Identifier set to %s
 item.fuzzy_identifier.name=Fuzzy Identifier
 item.ingot_francium.name=Francium Ingot
