--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -159,6 +159,8 @@ item.battery_pack.capacitor_niobium.name=ニオビウムコンデンサー
 item.battery_pack.capacitor_spark.name=スパークコンデンサー
 item.battery_pack.capacitor_tantalum.name=タンタリウムコンデンサー
 item.detonator_laser.desc2=マルチプレイで物を指すのにも使えるよ
+item.fix_tool.name=Cruci"fix"
+item.fix_survival.name=Satanic Energy Suppressor
 item.fuzzy_identifier.message=%sに設定されています
 item.fuzzy_identifier.name=ファジーフィルター
 item.ingot_francium.name=フランシウムインゴット
