fix custom nuke + add soldering & welding JEI

--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -69,6 +69,10 @@ death.attack.dfcMeltdown=%1$s was vaporized in the fire of a collapsing star
 death.attack.mine=%1$s should have paid attention to the floor
 death.attack.pointed=%1$s was ragged by pointed items on impact
 death.attack.poison=%1$s was fatally poisoned
+desc.leafia._jei.energy_s=%s/s
+desc.leafia._jei.energy_t=%s/t
+desc.leafia._jei.time_s=%s s
+desc.leafia._jei.time_t=%s ticks
 desc.leafia._repeated.reactors.compression=Steam compression switch$  Current compression level: %sx
 desc.leafia._repeated.reactors.controlrods=Control Rods: %s%%
 desc.leafia._repeated.reactors.off=Reactor is OFF
