--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -69,6 +69,10 @@ death.attack.dfcMeltdown=%1$sは崩壊する星の業火の中で蒸発した
 death.attack.mine=%1$sは床に注意をはらうべきだった
 death.attack.pointed=%1$sは衝撃でとがったアイテムにズタズタにされた
 death.attack.poison=%1$sは毒により死亡した
+desc.leafia._jei.energy_s=%s HE/s
+desc.leafia._jei.energy_t=%s HE/t
+desc.leafia._jei.time_s=%s 秒
+desc.leafia._jei.time_t=%s ティック
 desc.leafia._repeated.reactors.compression=蒸気圧縮レバー$  現在の圧縮レベル %sx
 desc.leafia._repeated.reactors.controlrods=制御棒 %s%%
 desc.leafia._repeated.reactors.off=原子炉は停止しています
