Add elevator spawn item

--- a/src/main/resources/assets/leafia/lang/ja_jp.lang
+++ b/src/main/resources/assets/leafia/lang/ja_jp.lang
@@ -164,6 +164,10 @@ item.battery_pack.capacitor_spark.name=スパークコンデンサー
 item.battery_pack.capacitor_tantalum.name=タンタリウムコンデンサー
 item.billet_kys.name=Kysmium-3000 Billet
 item.detonator_laser.desc2=マルチプレイで物を指すのにも使えるよ
+item.ev_spawn.desc=滑車の下に置いてください$スクリュードライバーでカスタマイズ$ハンドドリルで解体
+item.ev_spawn.error.direction=エラー: エレベーターが滑車の方向と違います!
+item.ev_spawn.error.pulley=エラー: 上に滑車を見つけられませんでした!
+item.ev_spawn.name=モジューラーエレベーター
 item.fix_tool.name=Cruci"fix"
 item.fix_survival.name=Satanic Energy Suppressor
 item.fuzzy_identifier.message=%sに設定されています
@@ -188,6 +192,11 @@ item.leafiarod.status.1=低温
 item.leafiarod.status.2=最適
 item.leafiarod.status.3=オーバーヒート
 item.leafiarod.status.4=メルトダウン
+item.leafiarod.status.0dg=大丈夫.. 今は。
+item.leafiarod.status.1dg=放っておけ
+item.leafiarod.status.2dg=やめろ
+item.leafiarod.status.3dg=迫っている
+item.leafiarod.status.4dg=感じろ
 item.leafiarod.temp=温度 %s
 item.leafiarodempty=核燃料棒組立体
 item.lwrdebris.conjunctive.alt={block}の{type}
