--- a/src/main/resources/assets/leafia/lang/en_us.lang
+++ b/src/main/resources/assets/leafia/lang/en_us.lang
@@ -152,6 +152,10 @@ item.battery_pack.battery_spk.name=Spark Battery
 item.battery_pack.battery_electro.name=Electronium Battery
 item.billet_kys.name=Kysmium-3000 Billet
 item.detonator_laser.desc2=Also can be used to indicate on multiplayer.
+item.ev_spawn.desc=Place under a pulley$Use screwdriver to configure$Use handdrill to deconstruct
+item.ev_spawn.error.direction=Error: Elevator doesn't match the angle of pulley!
+item.ev_spawn.error.pulley=Error: Couldn't find pulley above!
+item.ev_spawn.name=Modular Elevator
 item.fix_tool.name=Cruci"fix"
 item.fix_survival.name=Satanic Energy Suppressor
 item.fuzzy_identifier.message=Identifier set to %s
@@ -176,6 +180,11 @@ item.leafiarod.status.1=SUBOPTIMAL
 item.leafiarod.status.2=OPTIMAL
 item.leafiarod.status.3=OVERHEAT
 item.leafiarod.status.4=MELTDOWN
+item.leafiarod.status.0dg=OKAY.. FOR NOW
+item.leafiarod.status.1dg=LEAVE
+item.leafiarod.status.2dg=STOP
+item.leafiarod.status.3dg=NEAR
+item.leafiarod.status.4dg=FEEL
 item.leafiarod.temp=Temperature: %s
 item.leafiarodempty=Nuclear Fuel Rod Assembly
 item.lwrdebris.conjunctive.alt={type} of {block}
